--- a/WebContent/pages/home.xhtml
+++ b/WebContent/pages/home.xhtml
@@ -26,7 +26,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <ui:composition template="navbar.xhtml">
+    <ui:composition template="/templates/navbar.xhtml">
         <ui:define name="title">Home Page</ui:define>
         <ui:define name="content">
             <div class="ui-grid ui-grid-responsive">
