--- a/WebContent/pages/library.xhtml
+++ b/WebContent/pages/library.xhtml
@@ -26,7 +26,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <ui:composition template="navbar.xhtml">
+    <ui:composition template="/templates/navbar.xhtml">
         <ui:define name="title">Library</ui:define>
         <ui:define name="content">
             <div class="ui-grid ui-grid-responsive">
@@ -49,11 +49,14 @@
                 </div>
                 
                 <div class="ui-grid-row">
-                	<div class="ui-grid-col-4">
+                	<div class="ui-grid-col-12">
                 		<h:form>
-	                		<p:inputText id="bookId" value="#{libraryBean.bookId}" />
-	                		<p:inputText id="bookName" value="#{libraryBean.bookName}" />
-	                		<p:inputText id="bookCheckedOut" value="#{libraryBean.bookCheckedOut}" />
+	                		<p:inputText id="bookId" value="#{libraryBean.bookId}" placeholder="Book ID"/>
+	                		<br/>
+	                		<p:inputText id="bookName" value="#{libraryBean.bookName}" placeholder="Book Name"/>
+	                		<br/>
+	                		<p:inputText id="bookCheckedOut" value="#{libraryBean.bookCheckedOut}" placeholder="Checked out"/>
+	                		<br/>
 	                		<p:commandButton value="Add Book!" id="addBookBtn" action="#{libraryBean.addBook()}" update="allTheBooks" />
                 		</h:form>
                 	</div>
