--- a/WebContent/pages/library.xhtml
+++ b/WebContent/pages/library.xhtml
@@ -1,26 +1,3 @@
-<!-- <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-     xmlns:h="http://xmlns.jcp.org/jsf/html"
-     xmlns:f="http://xmlns.jcp.org/jsf/core"
-     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-     xmlns:p="http://primefaces.org/ui">
-
-    <h:head>
-        <title>Home</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <h:outputStylesheet name="title.css"/>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"></link>
-        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"/>
-    </h:head>
-	
-    <h:body>
-    	<ui:include src="/pages/navbar.xhtml"/>
-        <h2>#{homeBean.home}</h2>
-    </h:body>      
-</html> -->
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -54,6 +31,8 @@
 	                		<p:inputText id="bookId" value="#{libraryBean.bookId}" placeholder="Book ID"/>
 	                		<br/>
 	                		<p:inputText id="bookName" value="#{libraryBean.bookName}" placeholder="Book Name"/>
+	                		<br/>
+	                		<p:inputText id="bookInfo" value="#{libraryBean.info}" placeholder="Book Info"/>
 	                		<br/>
 	                		<p:inputText id="bookCheckedOut" value="#{libraryBean.bookCheckedOut}" placeholder="Checked out"/>
 	                		<br/>
