Fixed node deserializer, did some refactoring.

--- a/WebContent/pages/gear.xhtml
+++ b/WebContent/pages/gear.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <h2>Gear</h2>
                 <div class="ui-grid-row">
-					<pre>#{warframeBean.gearPrettyPrint}</pre>
+					<pre>#{warframeGearBean.gearPrettyPrint}</pre>
 				</div>
             </div>
         </ui:define>
