--- a/WebContent/pages/resources.xhtml
+++ b/WebContent/pages/resources.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <h2>Resources</h2>
                 <div class="ui-grid-row">
-					<pre>#{warframeBean.resourcesPrettyPrint}</pre>
+					<pre>#{warframeResourcesBean.resourcesPrettyPrint}</pre>
 				</div>
             </div>
         </ui:define>
