--- a/WebContent/pages/upgrades.xhtml
+++ b/WebContent/pages/upgrades.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                	<h2>Upgrades</h2>
                 <div class="ui-grid-row">
-					<pre>#{warframeBean.upgradesPrettyPrint}</pre>
+					<pre>#{warframeUpgradesBean.upgradesPrettyPrint}</pre>
 				</div>
             </div>
         </ui:define>
