--- a/WebContent/pages/alerts.xhtml
+++ b/WebContent/pages/alerts.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <h2>Alerts</h2>
                 <div class="ui-grid-row">
-					<pre>#{warframeBean.alertsPrettyPrint}</pre>
+					<pre>#{warframeAlertsBean.alertsPrettyPrint}</pre>
 				</div>
             </div>
         </ui:define>
