--- a/WebContent/pages/home.xhtml
+++ b/WebContent/pages/home.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <h2>Events</h2>
                 <div class="ui-grid-row">
-                    <pre>#{warframeBean.eventsPrettyPrint}</pre>
+                    <pre>#{warframeEventsBean.eventsPrettyPrint}</pre>
                 </div>
             </div>
         </ui:define>
