--- a/WebContent/pages/warframes.xhtml
+++ b/WebContent/pages/warframes.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <h2>Warframes</h2>
                 <div class="ui-grid-row">
-					<pre>#{warframeBean.warframesPrettyPrint}</pre>
+					<pre>#{warframeFramesBean.warframesPrettyPrint}</pre>
 				</div>
             </div>
         </ui:define>
